--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,69 @@
 @import 'tailwindcss';
 @plugin '@tailwindcss/forms';
 @plugin '@tailwindcss/typography';
+
+.leaflet-control-layers {
+	max-width: 300px;
+	overflow-y: auto;
+}
+
+.filter-container {
+}
+
+.filter {
+	margin-top: 10px;
+	padding: 10px;
+	border-top: 1px solid #ccc;
+}
+
+.filter label {
+	display: block;
+	font-weight: bold;
+	margin-bottom: 5px;
+	margin-top: 10px;
+}
+
+.year-slider {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.leaflet-div-icon {
+	height: 1rem;
+	width: 1rem;
+	border-radius: 100%;
+	background-color: blue;
+}
+.leaflet-div-icon--bad-lands {
+	background-color: red;
+}
+.leaflet-div-icon--poverty-flat {
+	background-color: green;
+}
+.leaflet-div-icon--smokey-pilgrims {
+	background-color: yellow;
+}
+.leaflet-div-icon--east-bottoms {
+	background-color: green;
+}
+
+.legend {
+	display: flex;
+	flex-direction: column;
+	gap: 0.25rem;
+}
+
+.legend__item {
+	display: flex;
+	align-items: center;
+	gap: 0.5rem;
+}
+
+.legend__icon {
+	width: 1rem;
+}
+.legend__icon > img {
+	width: 100%;
+	height: auto;
+}
